--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,20 +6,27 @@
 
     <h1>Fake Amazon: Buy at your own risk!</h1>
 
-    @foreach(Project p in Model.Projects)
+    @foreach(Books p in Model.Books)
     {
-    <ul>
-        <li style="display: none;">@p.BookID</li>
-        <li><h3>@p.Title</h3></li>
-        <li>Author: @p.Author</li>
-        <li>Publisher: @p.Publisher</li>
-        <li>ISBN: @p.ISBN</li>
-        <li>Classification/Category: @p.ClassificationOrCategory</li>
-        <li>Number of Pages: @p.NumberOfPages</li>
-        <li>Price: @p.Price</li>
-    </ul>
+    <div class="card m-1 p-1">
+        <h4>
+            @p.Title
+            <span class="badge rounded-pill bg-success text-white float-end">Cost: $@p.Price</span>
+
+        </h4>
+        <ul>
+            <li style="display: none;">@p.BookID</li>
+            <li>Author: @p.Author</li>
+            <li>Publisher: @p.Publisher</li>
+            <li>ISBN: @p.ISBN</li>
+            <li>Classification/Category: @p.Classification</li>
+            <li>Number of Pages: @p.PageCount</li>
+        </ul>
+    </div>
+
 
     }
 
-<div page-model="@Model.PaginationInfo" page-action="Index">
+<div page-model="@Model.PaginationInfo" page-action="Index" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" 
+page-class-selected="btn-primary" class="btn-group pull-right m-1">
 </div>
